--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -32,5 +32,9 @@
 	<string>$(PRODUCT_NAME) Camera Usage!</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>$(PRODUCT_NAME) Microphone Usage!</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+	<key>NSAllowsArbitraryLoads</key><true/>
+	</dict>
 </dict>
 </plist>
